--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@davstack/hume-voice-react": "^0.1.11-beta.17",
     "@heroicons/react": "^2.2.0",
+    "@humeai/voice-react": "^0.1.22",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@tailwindcss/vite": "^4.1.10",
+    "class-variance-authority": "^0.7.1",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
     "hume": "^0.11.4",
@@ -20,6 +24,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-virtualized": "^9.22.6",
+    "remeda": "^2.23.1",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.10"
   },
@@ -28,6 +35,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-virtualized": "^9.22.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
