--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -28,7 +28,8 @@
     "remeda": "^2.23.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.10"
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
